--- a/covid19sims/template.css
+++ b/covid19sims/template.css
@@ -73,7 +73,7 @@ header ul.horizontal_nav li a:hover {
   background-color: #E84B10;
 }
 .cbar5 {
-  background-color: #FF2F12;
+  background-color: #9E1F0B;
 }
 #content {
   background-color: #fff;
