--- a/covid19sims/template.css
+++ b/covid19sims/template.css
@@ -4,7 +4,8 @@ body {
   font-size: 1rem;
   line-height: 1.5;
   margin: 0;
-  padding: 0
+  padding: 0;
+  overflow-x: hidden;
 }
 header {
   width:100%;
