--- a/covid19sims/template.css
+++ b/covid19sims/template.css
@@ -10,6 +10,9 @@ body {
 svg path:hover {
   fill: #900;
 }
+svg path.off:hover {
+  fill: #777;
+}
 header {
   width:100%;
   height: 4.5rem;
@@ -117,4 +120,7 @@ div#last-updated {
 }
 #content-inner hr {
   border: 1px solid #555;
+}
+.off {
+  fill:#777;
 }
